comeplete color change and revamp

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0" />
   <meta name="theme-color" content="#3273DC" />
-  <link rel="canonical" href="https://josecoelho93.pt" />
+  <link rel="canonical" href="" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title></title>
   <meta name="description"
@@ -39,7 +39,7 @@
 
   <!-- stats - count particles -->
   <div class="count-particles">
-    <span class="js-count-particles">--</span> particles
+    <span class="js-count-particles">--</span> <span class="particle-body">particles</span>
   </div>
 
   <!-- stats.js -->
